--- a/style.css
+++ b/style.css
@@ -1,23 +1,3 @@
-#container {
-    display: flex;
-    flex-wrap: wrap;
-    width: 960px;
-    height: 960px;
-    gap: 0;
-}
-
-
-h1 {
-    text-align: center;
-}
-
-.square {
-    border: 1px solid black;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
 * {
     box-sizing: border-box;
     margin: 0;
@@ -29,10 +9,35 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 100vh;
+    font-family: Arial, sans-serif;
+}
+
+h1 {
+    text-align: center;
+}
+
+#container {
+    display: grid;
+    width: 960px;
+    height: 960px;
+    border: 1px solid black;
+    gap: 0;
+}
+
+.square {
+    border: 1px solid black;
+    box-sizing: border-box;
+    background-color: rgba(0, 0, 0, 0);
+    margin: 0;
+    padding: 0;
+    transition: background-color 0.2s;
 }
 
 button {
-    width: 100px;
-    margin-top: 40px;
-    margin-bottom: 40px;
+    width: 120px;
+    margin: 20px 0;
+    padding: 10px;
+    font-size: 16px;
+    cursor: pointer;
 }
